--- a/frontend/src/abgf.babycheck.frontend.contracts/abgf.babycheck.frontend.contracts/abgf.babycheck.frontend.contracts.csproj
+++ b/frontend/src/abgf.babycheck.frontend.contracts/abgf.babycheck.frontend.contracts/abgf.babycheck.frontend.contracts.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E5E9C0A8-317C-4BDB-8EA0-F7AD75E73E43}</ProjectGuid>
+    <ProjectGuid>{89E907B5-DFBD-4758-BBFA-8A7152E7E9EF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>abgf.babycheck.backend.domain.real</RootNamespace>
-    <AssemblyName>abgf.babycheck.backend.domain.real</AssemblyName>
+    <RootNamespace>abgf.babycheck.frontend.contracts</RootNamespace>
+    <AssemblyName>abgf.babycheck.frontend.contracts</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -20,7 +20,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -31,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=4.4.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\..\abgf.babycheck.frontend.wpf\packages\Autofac.4.4.0\lib\net45\Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,7 +44,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\abgf.babycheck.frontend.model\abgf.babycheck.frontend.model\abgf.babycheck.frontend.model.csproj">
+      <Project>{3ae1ae57-eb42-4fde-883e-946d9c962101}</Project>
+      <Name>abgf.babycheck.frontend.model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
